# close2GL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: cow_up.in  cube.in  cube_text.in
assets/shaders/: c2glr.frag  c2glr.vert  close2gl.frag  close2gl.vert  loadtest.frag  loadtest.vert  simple.frag  simple.vert
src/: LCRenderer.hpp  camera.hpp  close2GL.hpp  globalUtils.hpp  imguiUtil.hpp  main.cpp  shaderLoader.hpp  yaol.hpp
